--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dotenv": "^16.3.1",
     "cors": "^2.8.5",
     "body-parser": "^1.20.2",
-    "bcrypt": "^5.1.1"
+    "bcrypt": "^5.1.1",
+    "libphonenumber-js": "^1.12.36"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
